--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,5 +8,6 @@ author = {Huang, William},
 year = {2022},
 journal = {IEEE},
 url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4924881},
+selected={true},
 keywords = {ML}
 }
