Updated link for paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@ title = {Enhancing the Bionic Eye: A Real-time Image Optimization Framework to E
 author = {Huang, William},
 year = {2022},
 journal = {IEEE},
-url = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4924881},
+link = {https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4924881},
 selected={true},
 keywords = {ML}
 }
